--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-Test files
+My name is Edu and I'm a PhD. Student in Information Technology Communications and Computing at the UV (University of Valencia).
+
+In this repo I will share all my work in crowd simulation by DRL (deep reinforcement learning)
+
+I hope you like it,
+eDu
